# infra

./: .gitignore  CLAUDE.md  Justfile  README.md
ansible/: .gitignore  CLAUDE.md  ansible.cfg  inventory.yml
ansible/inventories/production/: hosts.yml
ansible/playbooks/: bootstrap-access.yml  config-agents.yml  config-caddy.yml  config-cliproxyapi-providers.yml  config-coach.yml  config-oauth2-proxy.yml  config-opencode.yml  env-agents.yml  harden-ssh.yml  init.yml  latest-bro.yml  latest-caddy.yml  latest-cliproxyapi.yml  latest-miniflux.yml  latest-opencode.yml  latest-pocketbase.yml  latest-syncthing.yml  setup-mise.yml  site.yml  update.yml
ansible/roles/access/defaults/: main.yml
ansible/roles/access/files/: sshd-hardening.conf
ansible/roles/access/tasks/: main.yml
ansible/roles/base/defaults/: main.yml
ansible/roles/base/handlers/: main.yml
ansible/roles/base/tasks/: main.yml
ansible/roles/caddy/defaults/: main.yml
ansible/roles/caddy/tasks/: main.yml
ansible/roles/caddy/templates/: 00-deny-unknown.caddy.j2  Caddyfile.j2  systemd-hardening.conf.j2
ansible/roles/cliproxyapi/defaults/: main.yml
ansible/scripts/: vault-password-client
ansible/templates/: Agents.env.j2  Agents.j2  BroAgent.j2  BroLivekit.j2  BroRedis.j2  CLIProxyAPI.j2  Caddyfile.j2  Coach.j2  Miniflux.j2  OAuth2Proxy.j2  OpenCode.j2  Pocketbase.j2  bro-livekit.yaml.j2  cliproxyapi.config.yaml.j2  miniflux.conf.j2  oauth2-proxy.cfg.j2  opencode.json.j2
chutes-cli/: chutes_cli.py  config.toml  pyproject.toml
docs/: service-inventory.md
(+31 files in other folders)
