[project]
name = "chutes-cli"
version = "0.1.0"
description = "CLI for managing Chutes AI models"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "rich",
    "tomli-w",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
chutes = "chutes_cli:main"
